--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 </head>
 
 <body>
-    <div class="flex flex-col items-center mt-12">
+    <div class="flex flex-col items-center mt-5">
 
-        <p class="text-3xl font-sans m-5">LeaderBoard</p>
+        <p class="text-3xl font-sans m-2">LeaderBoard</p>
 
         <div class="m-5">
             <form action="#">
@@ -46,21 +46,7 @@
                 <button type="submit" id="submitBtn" class="border p-1 border-green-400 hover:bg-green-100">Add Player</button>
             </form>
         </div>
-        <div id="playerCard"
-            class="m-5 flex  justify-center	border h-24 justify-center border-green-200	 bg-green-100 font-semibold">
-            <!-- <p class="w-24 pt-8 border text-center">Akhil</p>
-            <p class="w-24	pt-8 border text-center">sharma</p>
-            <p class="w-24	pt-8 border text-center">Country</p>
-            <p class="w-24	pt-8 border text-center">Score</p>
-            <button class="w-24	border pl-9">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5">
-                    <path fill-rule="evenodd"
-                        d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
-                        clip-rule="evenodd" />
-                </svg>
-            </button>
-            <button class="w-24	border">+5</button>
-            <button class="w-24	border">-5</button> -->
+            <div id="playerCard"> </div>
         </div>
     </div>
 
