--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <button type="submit" id="submitBtn" class="border p-1 border-green-400 hover:bg-green-100">Add Player</button>
             </form>
         </div>
-            <div id="playerCard"> </div>
+            <div id="playerCard"> 
+ 
+            </div>
         </div>
     </div>
 
